--- a/ToDoApp/Base.lproj/Main.storyboard
+++ b/ToDoApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UAX-Jy-3Mh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fYV-wl-TWb">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -134,6 +134,7 @@
                             <outlet property="delegate" destination="UAX-Jy-3Mh" id="afj-oe-4LV"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="HTx-pc-BrS"/>
                     <connections>
                         <outlet property="taskDetailDatePicker" destination="rki-WG-mJq" id="VQx-Pl-Zlx"/>
                         <outlet property="taskDetailNotesTextView" destination="uon-ng-vxe" id="w0f-lw-bG5"/>
@@ -142,7 +143,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="99I-X7-DCc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1846" y="-2"/>
+            <point key="canvasLocation" x="2784.8000000000002" y="-2.2488755622188905"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gyX-DX-dNc">
@@ -161,6 +162,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DYx-Ra-Efu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="47.692307692307693" y="-2.1327014218009479"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fCw-er-TDj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8xl-L3-KJv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Cn3-wD-XRt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UAX-Jy-3Mh" kind="relationship" relationship="rootViewController" id="bEw-ZQ-BfD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KGq-UL-cGu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1900" y="-470"/>
         </scene>
     </scenes>
     <resources>
