--- a/ToDoApp/Base.lproj/Main.storyboard
+++ b/ToDoApp/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="H5h-ED-OII" customClass="ToDoTaskTableViewCell" customModule="ToDoApp" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="toDoTaskCell" id="H5h-ED-OII" customClass="ToDoTaskTableViewCell" customModule="ToDoApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="375" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="H5h-ED-OII" id="aa5-2A-cxN">
@@ -42,7 +42,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="taskTitleLabel" destination="UML-30-JNY" id="ogq-Zf-qFu"/>
-                                            <segue destination="UAX-Jy-3Mh" kind="show" id="2pE-UQ-nCf"/>
+                                            <segue destination="UAX-Jy-3Mh" kind="show" identifier="taskDetailSegue" id="2pE-UQ-nCf"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -169,7 +169,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="HTx-pc-BrS">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="lOT-QC-7X0"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="lOT-QC-7X0">
+                            <connections>
+                                <action selector="cancelAddTaskButtonPressed:" destination="UAX-Jy-3Mh" id="Kzp-fA-ZDq"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="aOf-cx-uDq"/>
                     </navigationItem>
                     <connections>
