--- a/ToDoApp/Base.lproj/LaunchScreen.storyboard
+++ b/ToDoApp/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21503.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21501.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,13 +15,55 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uCc-Xu-Yk8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="todoAppLaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="omK-JJ-99r">
+                                        <rect key="frame" x="67" y="269.5" width="241" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="O7H-Hc-dA2"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ToDoApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AZv-mE-JVW">
+                                        <rect key="frame" x="67" y="405.5" width="241" height="38"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="241" id="dGP-uX-8lx"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="NotoSansKannada-Bold" family="Noto Sans Kannada" pointSize="28"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="omK-JJ-99r" firstAttribute="centerY" secondItem="uCc-Xu-Yk8" secondAttribute="centerY" id="5ZR-5d-5Hp"/>
+                                    <constraint firstItem="omK-JJ-99r" firstAttribute="leading" secondItem="uCc-Xu-Yk8" secondAttribute="leading" constant="67" id="MhB-bp-fu3"/>
+                                    <constraint firstItem="AZv-mE-JVW" firstAttribute="top" secondItem="omK-JJ-99r" secondAttribute="bottom" constant="8" symbolic="YES" id="Rtg-Ua-uO9"/>
+                                    <constraint firstItem="AZv-mE-JVW" firstAttribute="leading" secondItem="uCc-Xu-Yk8" secondAttribute="leading" constant="67" id="cuf-oq-3rL"/>
+                                    <constraint firstItem="omK-JJ-99r" firstAttribute="centerX" secondItem="uCc-Xu-Yk8" secondAttribute="centerX" id="oQZ-3C-iYV"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uCc-Xu-Yk8" secondAttribute="trailing" id="R3h-en-dHW"/>
+                            <constraint firstItem="uCc-Xu-Yk8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hf8-Bn-5YO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uCc-Xu-Yk8" secondAttribute="bottom" id="snS-qd-MPi"/>
+                            <constraint firstItem="uCc-Xu-Yk8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="z3A-oN-BCC"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="todoAppLaunchScreen" width="256" height="208.5"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
